Fix page break in print styling (#78)
* Fikser page break i print styling ved bruk av break-inside: avoid;

* Oppdater snapshots

--- a/src/felleskomponenter/EkspanderbartInfopanel/EkspanderbartInfopanel.less
+++ b/src/felleskomponenter/EkspanderbartInfopanel/EkspanderbartInfopanel.less
@@ -12,6 +12,13 @@ span.ekspanderbartPanel__tittel {
     width: 100%;
 }
 .ekspanderbart-infopanel {
+    &__root {
+        @media print {
+            display: block;
+            break-inside: avoid;
+        }
+    }
+
     &__print-innhold {
         display: none;
     }
